Revision history for Perl extension RPi::WiringPi.

2.3625 UNREL
        - in FAQ, add the 4 row 20 col config to env vars (closes #65)
        - bumped prereq RPi::Pin to 2.3606
        - added I2C, Serial and SPI configuration details at the top of the FAQ
          (closes #63; closes #64)
        - re-enabled "both" interrupt test file (closes #48)

2.3624  2018-03-27
        - added blurb in FAQ Testing section that describes setting up I2C and
          serial properly
        - bumped prereq version of WiringPi::API to 2.3616 which provides more
          elegant handling if the version of wiringPi that's installed isn't
          at the minimum 2.36
          
2.3623  2018-03-14
        - Pi day!
        - added support for the new RPi::StepperMotor distribution
        - reworked the FAQ and added Test::POD::LinkCheck tests to ensure all
          POD links resolve correctly
        - add blurb in FAQ that the pi user may need to be added to the "gpio"
          group for sudo-less access
        - bump prereq of GPSD::Parse from 1.01 to 1.02 due to the new
          convenience methods added recently

2.3622  2018-02-10
        - no functional changes
        - added env var and related info about testing RPi::LCD in the testing
          section POD (closes #59)
        - fix small formatting issue (C<<>>) in POD (closes #56)
        - test fixes/updates
        - t/RPiTest.pm now checks whether the serial pins (14, 15) are in alt
          mode 4 (default) or 2 (bluetooth disabled)
        - add blurb in FAQ and POD about lowering I2C bus speed if using I2C
          with an Arduino (closes #61)
        - fix incorrect RPi::Pin POD link in Core (closes #60)
        - add blurb about disabling bluetooth when using serial (closes #57)
        - re-added t/README for test GPIO pin usage (closes #58)
        - bump prereq versions of RPi::Serial, RPi::I2C, RPi::SPI

2.3621  2017-10-03
        - removed the test/images and images/ directory from the repo