@@ -6,6 +6,8 @@ Revision history for Perl extension RPi::WiringPi.
         - added I2C, Serial and SPI configuration details at the top of the FAQ
           (closes #63; closes #64)
         - re-enabled "both" interrupt test file (closes #48)
+        - servo() now accepts a configuration hash that allows sending in a
+          non-default PWM clock speed and PWM range (closes #45)
 
 2.3624  2018-03-27
         - added blurb in FAQ Testing section that describes setting up I2C and
